# Proyecto-RL

gymtonic-main/: README.md  pyproject.toml
gymtonic-main/docs/: grid_target_simple.md
gymtonic-main/gymtonic-main/: .gitignore
gymtonic-main/gymtonic-main/docs/: block_push.md  grid_target.md  grid_target_directional.md  soccer_single.md
gymtonic-main/gymtonic-main/gymtonic/: __init__.py
gymtonic-main/gymtonic-main/gymtonic/envs/: block_push_ray_v0.py  grid_base.py  grid_target_directional_v0.py  grid_target_simple_v0.py  grid_target_v0.py  soccer_single_discrete_v0.py  soccer_stadium.py
gymtonic-main/gymtonic/envs/: __init__.py  _old_soccer_single_v1_.py  aaron_socccer.py  aaron_soccer.py  aaron_stadium.py  block_push_v0.py  raycast.py  soccer.py  soccer_curriculum.py  soccer_single_ray_v0.py  soccer_single_v0.py  soccer_stadium.py
gymtonic-main/tensorboard/PPO_1/: events.out.tfevents.1767534978.DESKTOP-LK93I6O.6200.0
gymtonic-main/tensorboard/from_checkpoint/PPO_0/: events.out.tfevents.1767536322.DESKTOP-LK93I6O.14176.0  events.out.tfevents.1767622196.DESKTOP-LK93I6O.14692.0  events.out.tfevents.1767693800.LAPTOP-BEQ2QHSM.1016.0  events.out.tfevents.1767788412.MacBook-Air-de-Iker-4.local.66185.0
gymtonic-main/tensorboard_iker/PPO_0/: events.out.tfevents.1767776724.MacBook-Air-de-Iker-4.local.53133.0  events.out.tfevents.1767788308.MacBook-Air-de-Iker-4.local.65807.0
gymtonic-main/test/: aaron_test.py  iker_test.py  test.py  test_curriculum.py  test_soccer_single_v0.py
gymtonic-main/tests/: test_soccer_single_v0.py
(+7 files in other folders)
