[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gymtonic"
version = "0.1.7"
authors = [
  { name="Inaki Vazquez", email="ivazquez@deusto.es" },
]
description = "A set of Gymnasium compatible environments."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "gymnasium>=1.1.1",
    "pybullet",
    "mujoco"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.setuptools.package-data]
# Specify the meshes folder
"gymtonic.envs" = ["meshes/*"]

[project.urls]
Homepage = "https://github.com/inakivazquez/gymtonic"
Issues = "https://github.com/inakivazquez/gymtonic/issues"